--- a/public/all-lines.html
+++ b/public/all-lines.html
@@ -18,14 +18,13 @@
                           <div></div>
                       </div>
                   </a>
-                  <ul class="submenu">
-                    <li class="menu-item"><a href="/all-lines.html" ><h6>Всички линии</h6></a></li>
-                      <li class="menu-item"id="main-page-button"><a href="/choose-lines.html" ><h6>Избор на любими линии</h6></a></li>
-                      <li class="menu-item"><a href="/favourite-lines.html" ><h6>Любими линии</h6></a></li>
-                      <li class="menu-item">
-                        <a href="/feedback.html"><h6>Изпратете отзив</h6></a>
-                      </li>
-                      <li class="menu-item"><a href="/complaint.html" ><h6>Сегашни проблеми</h6></a></li>
+                    <ul class="submenu">
+                        <li class="menu-item"><a href="/all-lines.html" ><h6>Всички линии</h6></a></li>
+                        <li class="menu-item"id="main-page-button"><a href="/choose-lines.html" ><h6>Избор на любими линии</h6></a></li>
+                        <li class="menu-item"><a href="/favourite-lines.html" ><h6>Любими линии</h6></a></li>
+                        <li class="menu-item"><a href="/feedback.html"><h6>Изпратете отзив</h6></a></li>
+                        <li class="menu-item"><a href="/service.html" ><h6>Съобщете за проблем</h6></a></li>
+                        <li class="menu-item"><a href="/complaint.html" ><h6>Сегашни проблеми</h6></a></li>
                   </ul>
               </li>
           </ul>
@@ -40,64 +39,64 @@
         </div>
     </nav>
     <main>
-    <div class="button-container">
-        <div class="button-div">
-            <a href="lines/liniq1.html">
-                <button class="btn btn-warning">
-                    <img src="lines/img/1.jpg" alt="Линия 1">
-                    <h5>линия 1</h5>
-                </button>
-            </a>
+        <div class="button-container">
+            <div class="button-div">
+                <a href="lines/liniq1.html">
+                    <button class="btn btn-warning">
+                        <img src="lines/img/1.jpg" alt="Линия 1">
+                        <h5>линия 1</h5>
+                    </button>
+                </a>
+            </div>
+            <div class="button-div">
+                <a  href="lines/liniq7.html">
+                    <button class="btn btn-warning">
+                        <img src="lines/img/7.jpg" alt="Линия 7">
+                        <h5>линия 7</h5>
+                    </button>
+                </a>
+            </div>
+            <div class="button-div">
+                <a href="lines/liniq9.html">
+                    <button class="btn btn-warning">
+                        <img src="lines/img/9.jpg" alt="Линия 9">
+                        <h5>линия 9</h5>
+                    </button>
+                </a>
+            </div>
+            <div class="button-div">
+                <a href="lines/liniq11.html">
+                    <button class="btn btn-warning">
+                        <img src="lines/img/11.jpg" alt="Линия 11">
+                        <h5>линия 11</h5>
+                    </button>
+                </a>
+            </div>
+            <div class="button-div">
+                <a href="lines/liniq16.html">
+                    <button class="btn btn-warning">
+                        <img src="lines/img/16.jpg" alt="Линия 16">
+                        <h5>линия 16</h5>
+                    </button>
+                </a>
+            </div>
+            <div class="button-div">
+                <a href="lines/liniq27.html">
+                    <button class="btn btn-warning">
+                        <img src="lines/img/27.jpg" alt="Линия 27">
+                        <h5>линия 27</h5>
+                    </button>
+                </a>
+            </div>
+            <div class="button-div">
+                <a href="lines/liniq36.html">
+                    <button class="btn btn-warning">
+                        <img src="lines/img/36.jpg" alt="Линия 36">
+                        <h5>линия 36</h5>
+                    </button>
+                </a>
+            </div>
         </div>
-        <div class="button-div">
-            <a  href="lines/liniq7.html">
-                <button class="btn btn-warning">
-                    <img src="lines/img/7.jpg" alt="Линия 7">
-                    <h5>линия 7</h5>
-                </button>
-            </a>
-        </div>
-        <div class="button-div">
-            <a href="lines/liniq9.html">
-                <button class="btn btn-warning">
-                    <img src="lines/img/9.jpg" alt="Линия 9">
-                    <h5>линия 9</h5>
-                </button>
-            </a>
-        </div>
-        <div class="button-div">
-            <a href="lines/liniq11.html">
-                <button class="btn btn-warning">
-                    <img src="lines/img/11.jpg" alt="Линия 11">
-                    <h5>линия 11</h5>
-                </button>
-            </a>
-        </div>
-        <div class="button-div">
-            <a href="lines/liniq16.html">
-                <button class="btn btn-warning">
-                    <img src="lines/img/16.jpg" alt="Линия 16">
-                    <h5>линия 16</h5>
-                </button>
-            </a>
-        </div>
-        <div class="button-div">
-            <a href="lines/liniq27.html">
-                <button class="btn btn-warning">
-                    <img src="lines/img/27.jpg" alt="Линия 27">
-                    <h5>линия 27</h5>
-                </button>
-            </a>
-        </div>
-        <div class="button-div">
-            <a href="lines/liniq36.html">
-                <button class="btn btn-warning">
-                    <img src="lines/img/36.jpg" alt="Линия 36">
-                    <h5>линия 36</h5>
-                </button>
-            </a>
-        </div>
-    </div>
     </main>
     <footer>
         <ul class="footer-links">
