--- a/public/favourite-lines.html
+++ b/public/favourite-lines.html
@@ -22,12 +22,11 @@
               </a>
               <ul class="submenu">
                 <li class="menu-item"><a href="/all-lines.html" ><h6>Всички линии</h6></a></li>
-                  <li class="menu-item"id="main-page-button"><a href="/choose-lines.html" ><h6>Избор на любими линии</h6></a></li>
-                  <li class="menu-item"><a href="/favourite-lines.html" ><h6>Любими линии</h6></a></li>
-                  <li class="menu-item">
-                    <a href="/feedback.html"><h6>Изпратете отзив</h6></a>
-                  </li>
-                  <li class="menu-item"><a href="/complaint.html" ><h6>Сегашни проблеми</h6></a></li>
+                <li class="menu-item"id="main-page-button"><a href="/choose-lines.html" ><h6>Избор на любими линии</h6></a></li>
+                <li class="menu-item"><a href="/favourite-lines.html" ><h6>Любими линии</h6></a></li>
+                <li class="menu-item"><a href="/feedback.html"><h6>Изпратете отзив</h6></a></li>
+                <li class="menu-item"><a href="/service.html" ><h6>Съобщете за проблем</h6></a></li>
+                <li class="menu-item"><a href="/complaint.html" ><h6>Сегашни проблеми</h6></a></li>
               </ul>
           </li>
       </ul>
@@ -43,10 +42,10 @@
   </nav>
   <br>
   <main>
-  <h5 class="center">Любими линии</h5>
-  <div class="button-div"></div>
-  <div id="lineButtons" class="center"></div>
-</main>
+    <h5 class="center">Любими линии</h5>
+    <div class="button-div"></div>
+    <div id="lineButtons" class="center"></div>
+  </main>
   <footer>
     <ul class="footer-links">
         <li><a href="privacy.html">Политика за поверителност</a></li>
