--- a/public/service.html
+++ b/public/service.html
@@ -22,10 +22,11 @@
                         </a>
                         <ul class="submenu">
                             <li class="menu-item"><a href="/all-lines.html" ><h6>Всички линии</h6></a></li>
-                            <li class="menu-item" id="main-page-button"><a href="/choose-lines.html"><h6>Избор на любими линии</h6></a></li>
+                            <li class="menu-item"id="main-page-button"><a href="/choose-lines.html" ><h6>Избор на любими линии</h6></a></li>
                             <li class="menu-item"><a href="/favourite-lines.html" ><h6>Любими линии</h6></a></li>
-                            <li class="menu-item"><a href="/feedback.html"><h6>Изпратете отзив</h6></a></li>  
-                        <li class="menu-item"><a href="/complaint.html" ><h6>Сегашни проблеми</h6></a></li>
+                            <li class="menu-item"><a href="/feedback.html"><h6>Изпратете отзив</h6></a></li>
+                            <li class="menu-item"><a href="/service.html" ><h6>Съобщете за проблем</h6></a></li>
+                            <li class="menu-item"><a href="/complaint.html" ><h6>Сегашни проблеми</h6></a></li>
                         </ul>
                     </li>
                 </ul>
@@ -40,19 +41,19 @@
             </div>
         </nav>
     </header>
-<main>
-    <section class="complaint-form">
-        <h2>Напишете вашия проблем</h2>
-        <form id="complaintForm">
-            <label for="subject">Тема:</label>
-            <input type="text" id="subject" name="subject" required >
-            <label for="message">Съобщение:</label>
-            <textarea id="message" name="message" required></textarea>
-            <button type="submit">Подай</button>
-        </form>
-        <div id="responseMessage"></div>
-    </section>
-</main>
+    <main>
+        <section class="complaint-form">
+            <h2>Напишете вашия проблем</h2>
+            <form id="complaintForm">
+                <label for="subject">Тема:</label>
+                <input type="text" id="subject" name="subject" required >
+                <label for="message">Съобщение:</label>
+                <textarea id="message" name="message" required></textarea>
+                <button type="submit">Подай</button>
+            </form>
+            <div id="responseMessage"></div>
+        </section>
+    </main>
     <footer>
         <ul class="footer-links">
             <li><a href="/privacy.html">Политика за поверителност</a></li>
