--- a/public/complaint.html
+++ b/public/complaint.html
@@ -21,12 +21,11 @@
                       </a>
                       <ul class="submenu">
                         <li class="menu-item"><a href="/all-lines.html" ><h6>Всички линии</h6></a></li>
-                          <li class="menu-item"id="main-page-button"><a href="/choose-lines.html" ><h6>Избор на любими линии</h6></a></li>
-                          <li class="menu-item"><a href="/favourite-lines.html" ><h6>Любими линии</h6></a></li>
-                          <li class="menu-item">
-                            <a href="/feedback.html"><h6>Изпратете отзив</h6></a>
-                          </li>
-                          <li class="menu-item"><a href="/complaint.html" ><h6>Сегашни проблеми</h6></a></li>
+                        <li class="menu-item"id="main-page-button"><a href="/choose-lines.html" ><h6>Избор на любими линии</h6></a></li>
+                        <li class="menu-item"><a href="/favourite-lines.html" ><h6>Любими линии</h6></a></li>
+                        <li class="menu-item"><a href="/feedback.html"><h6>Изпратете отзив</h6></a></li>
+                        <li class="menu-item"><a href="/service.html" ><h6>Съобщете за проблем</h6></a></li>
+                        <li class="menu-item"><a href="/complaint.html" ><h6>Сегашни проблеми</h6></a></li>
                       </ul>
                   </li>
               </ul>
