--- a/public/feedback.html
+++ b/public/feedback.html
@@ -24,14 +24,13 @@
                         </div>
                     </a>
                     <ul class="submenu">
-                      <li class="menu-item"><a href="/all-lines.html" ><h6>Всички линии</h6></a></li>
+                        <li class="menu-item"><a href="/all-lines.html" ><h6>Всички линии</h6></a></li>
                         <li class="menu-item"id="main-page-button"><a href="/choose-lines.html" ><h6>Избор на любими линии</h6></a></li>
                         <li class="menu-item"><a href="/favourite-lines.html" ><h6>Любими линии</h6></a></li>
-                        <li class="menu-item">
-                          <a href="/feedback.html"><h6>Изпратете отзив</h6></a>
-                        </li>
+                        <li class="menu-item"><a href="/feedback.html"><h6>Изпратете отзив</h6></a></li>
+                        <li class="menu-item"><a href="/service.html" ><h6>Съобщете за проблем</h6></a></li>
                         <li class="menu-item"><a href="/complaint.html" ><h6>Сегашни проблеми</h6></a></li>
-                    </ul>
+                      </ul>
                 </li>
             </ul>
         </div>
@@ -39,33 +38,33 @@
             <span class="nav-title"><h4>Пловдив транспорт</h4></span>
         </div>
         <div class="nav-right">
-          <span >
+          <span>
             <a href="/index.html"><button type="button" class="btn btn-primary"><h5>Изход</h5></button> </a>
           </span>
         </div>
     </nav>
     <main>
-<div class="absolutefix">
-    <div class="container">
-        <h1>Форма за обратна връзка</h1>
-        <form id="feedbackForm">
-            <label for="userEmail">Вашия е-майл:</label>
-            <input type="email" id="userEmail" name="userEmail" required>
-            <label for="message">Вашето съобщение:</label>
-            <textarea id="message" name="message" rows="4" required></textarea>
-            <button type="button" class="btn btn-primary" onclick="sendFeedback()"><h6>Изпратете отзив</h6></button>
-        </form>
-    </div>
-</div>
-</main>
-<footer>
-    <ul class="footer-links">
-        <li><a href="privacy.html">Политика за поверителност</a></li>
-        <li><a href="feedback.html">Свържете се с нас</a></li>
-    </ul>
-    <hr>
-    <p>&copy; 2024 Пловдив транспорт. Всички права са запазени.</p>
-</footer>
+        <div class="absolutefix">
+            <div class="container">
+                <h1>Форма за обратна връзка</h1>
+                <form id="feedbackForm">
+                    <label for="userEmail">Вашия е-майл:</label>
+                    <input type="email" id="userEmail" name="userEmail" required>
+                    <label for="message">Вашето съобщение:</label>
+                    <textarea id="message" name="message" rows="4" required></textarea>
+                    <button type="button" class="btn btn-primary" onclick="sendFeedback()"><h6>Изпратете отзив</h6></button>
+                </form>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <ul class="footer-links">
+            <li><a href="privacy.html">Политика за поверителност</a></li>
+            <li><a href="feedback.html">Свържете се с нас</a></li>
+        </ul>
+        <hr>
+        <p>&copy; 2024 Пловдив транспорт. Всички права са запазени.</p>
+    </footer>
     <script src="scripts/feedback.js"></script>
 </body>
 </html>
