--- a/public/privacy.html
+++ b/public/privacy.html
@@ -19,12 +19,12 @@
                         </div>
                     </a>
                     <ul class="submenu">
-                        <li class="menu-item"><a href="/all-lines.html" ><h6>Всички линии</h6></a></li>
-                        <li class="menu-item"id="main-page-button"><a href="/choose-lines.html" ><h6>Избор на любими линии</h6></a></li>
-                        <li class="menu-item"><a href="/favourite-lines.html" ><h6>Любими линии</h6></a></li>
-                        <li class="menu-item"><a href="/feedback.html"><h6>Изпратете отзив</h6></a></li>
-                        <li class="menu-item"><a href="/service.html" ><h6>Съобщете за проблем</h6></a></li>
-                        <li class="menu-item"><a href="/complaint.html" ><h6>Сегашни проблеми</h6></a></li>
+                        <li class="menu-item"><a href="/all-lines.html" onclick="checkAuth()"><h6>Всички линии</h6></a></li>
+                        <li class="menu-item"><a href="/choose-lines.html" onclick="checkAuth()"><h6>Избор на любими линии</h6></a></li>
+                        <li class="menu-item"><a href="/favourite-lines.html" onclick="checkAuth()"><h6>Любими линии</h6></a></li>
+                        <li class="menu-item"><a href="/feedback.html" onclick="checkAuth()"><h6>Изпратете отзив</h6></a></li>
+                        <li class="menu-item"><a href="/service.html" onclick="checkAuth()"><h6>Съобщете за проблем</h6></a></li>
+                        <li class="menu-item"><a href="/complaint.html" onclick="checkAuth()"><h6>Сегашни проблеми</h6></a></li>
                       </ul>
                 </li>
             </ul>
@@ -122,5 +122,6 @@
         <hr>
         <p>&copy; 2024 Пловдив транспорт. Всички права са запазени.</p>
     </footer>
+    <script src="scripts/privacy.js"></script>
 </body>
 </html>
