--- a/public/feedback.html
+++ b/public/feedback.html
@@ -24,13 +24,13 @@
                         </div>
                     </a>
                     <ul class="submenu">
-                        <li class="menu-item"><a href="/all-lines.html" onclick="checkAuth()"><h6>Всички линии</h6></a></li>
-                        <li class="menu-item"><a href="/choose-lines.html" onclick="checkAuth()"><h6>Избор на любими линии</h6></a></li>
-                        <li class="menu-item"><a href="/favourite-lines.html" onclick="checkAuth()"><h6>Любими линии</h6></a></li>
-                        <li class="menu-item"><a href="/feedback.html" onclick="checkAuth()"><h6>Изпратете отзив</h6></a></li>
-                        <li class="menu-item"><a href="/service.html" onclick="checkAuth()"><h6>Съобщете за проблем</h6></a></li>
-                        <li class="menu-item"><a href="/complaint.html" onclick="checkAuth()"><h6>Сегашни проблеми</h6></a></li>
-                      </ul>
+                        <li class="menu-item"><a href="/all-lines.html" onclick="checkAuthAllLines()"><h6>Всички линии</h6></a></li>
+                        <li class="menu-item"><a href="/choose-lines.html" onclick="checkAuthChooseLines()"><h6>Избор на любими линии</h6></a></li>
+                        <li class="menu-item"><a href="/favourite-lines.html" onclick="checkAuthFavouriteLines()"><h6>Любими линии</h6></a></li>
+                        <li class="menu-item"><a href="/feedback.html" onclick="checkAuthFeedback()"><h6>Изпратете отзив</h6></a></li>
+                        <li class="menu-item"><a href="/service.html" onclick="checkAuthService()"><h6>Съобщете за проблем</h6></a></li>
+                        <li class="menu-item"><a href="/complaint.html" onclick="checkAuthComplaint()"><h6>Сегашни проблеми</h6></a></li>
+                    </ul>
                 </li>
             </ul>
         </div>
