--- a/public/feedback.html
+++ b/public/feedback.html
@@ -24,12 +24,12 @@
                         </div>
                     </a>
                     <ul class="submenu">
-                        <li class="menu-item"><a href="/all-lines.html" onclick="checkAuthAllLines()"><h6>Всички линии</h6></a></li>
-                        <li class="menu-item"><a href="/choose-lines.html" onclick="checkAuthChooseLines()"><h6>Избор на любими линии</h6></a></li>
-                        <li class="menu-item"><a href="/favourite-lines.html" onclick="checkAuthFavouriteLines()"><h6>Любими линии</h6></a></li>
-                        <li class="menu-item"><a href="/feedback.html" onclick="checkAuthFeedback()"><h6>Изпратете отзив</h6></a></li>
-                        <li class="menu-item"><a href="/service.html" onclick="checkAuthService()"><h6>Съобщете за проблем</h6></a></li>
-                        <li class="menu-item"><a href="/complaint.html" onclick="checkAuthComplaint()"><h6>Сегашни проблеми</h6></a></li>
+                        <li class="menu-item"><a onclick="checkAuthAllLines()"><h6>Всички линии</h6></a></li>
+                        <li class="menu-item"><a onclick="checkAuthChooseLines()"><h6>Избор на любими линии</h6></a></li>
+                        <li class="menu-item"><a onclick="checkAuthFavouriteLines()"><h6>Любими линии</h6></a></li>
+                        <li class="menu-item"><a onclick="checkAuthFeedback()"><h6>Изпратете отзив</h6></a></li>
+                        <li class="menu-item"><a onclick="checkAuthService()"><h6>Съобщете за проблем</h6></a></li>
+                        <li class="menu-item"><a onclick="checkAuthComplaint()"><h6>Сегашни проблеми</h6></a></li>
                     </ul>
                 </li>
             </ul>
