--- a/public/favourite-lines.html
+++ b/public/favourite-lines.html
@@ -22,7 +22,7 @@
               </a>
               <ul class="submenu">
                 <li class="menu-item"><a href="/all-lines.html" ><h6>Всички линии</h6></a></li>
-                <li class="menu-item"id="main-page-button"><a href="/choose-lines.html" ><h6>Избор на любими линии</h6></a></li>
+                <li class="menu-item"><a href="/choose-lines.html" ><h6>Избор на любими линии</h6></a></li>
                 <li class="menu-item"><a href="/favourite-lines.html" ><h6>Любими линии</h6></a></li>
                 <li class="menu-item"><a href="/feedback.html"><h6>Изпратете отзив</h6></a></li>
                 <li class="menu-item"><a href="/service.html" ><h6>Съобщете за проблем</h6></a></li>
