--- a/public/choose-lines.html
+++ b/public/choose-lines.html
@@ -41,7 +41,7 @@
   <main>
     <form id="lineForm" action="/save-choice" method="POST">
       <fieldset>
-        <legend>Изберете любими линии:</legend>
+        <legend>Изберете любимите си линии:</legend>
         <br>
         <br>
         <label><input type="checkbox" name="line" value="1" id="l1"> линия 1</label><br>
